syntax = "proto3";

package drive_protocol.request;

option java_package = "drive_protocol.request";
option java_multiple_files = true;

import "Comm.proto";

message RequestInfo {
  uint64 process_id = 1;
  bool is_directory = 2;
  bool delete_on_close = 3;
  bool paging_io = 4;
  bool synchronous_io = 5;
  bool no_cache = 6;
  bool write_to_end_of_file = 7;
}

message CredentialInfo {
  string machine_id = 1;
  string user_id = 2;
  string session_id = 3;
}

message SubMessage {
  drive_protocol.comm.Command command = 1;
  drive_protocol.comm.ConnectionInfo connection = 2;
}

message CreateFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  uint32 desired_access = 4;
  uint32 file_attributes = 5;
  uint32 share_access = 6;
  uint32 create_disposition = 7;
  uint32 create_options = 8;
  uint32 file_mode = 9;
  uint32 file_attributes_and_flag = 10;
}

message CloseFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  uint32 share_access = 4;
}

message ReadFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  uint64 length = 4;
  int64 offset = 5;
  uint32 file_mode = 6;
}

message WriteFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  uint64 length = 4;
  int64 offset = 5;
  bytes buffer = 6;
  uint32 file_mode = 7;
}

message FlushFileBufferRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
}

message GetFileInformationRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
}

message DeleteFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
}

message DeleteDirectoryRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
}

message MoveFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  string new_file_name = 4;
  bool replace_if_existing = 5;
}

message LockFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  int64 offset = 4;
  int64 length = 5;
}

message SetEndOfFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  int64 offset = 4;
}

message SetAllocationSizeRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  int64 size = 4;
}

message SetFileAttributesRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  uint64 file_attributes = 4;
}

message UnlockFileRequest {
  RequestInfo req = 1;
  CredentialInfo cred = 2;
  string file_name = 3;
  int64 offset = 4;
  int64 length = 5;
}

