syntax = "proto3";

package drive_protocol.response;

option java_package = "drive_protocol.response";
option java_multiple_files = true;

import "Comm.proto";

message PubMessage {
  int32 status = 1;
  drive_protocol.comm.Command command = 2;
  drive_protocol.comm.ConnectionInfo connection = 3;
}

message CreateFileResponse {
  int32 status = 1;
}

message CloseFileResponse {
  int32 status = 1;
}

message ReadFileResponse {
  int32 status = 1;
  bytes buffer = 2;
}

message WriteFileResponse {
  int32 status = 1;
}

message FlushFileBufferResponse {
  int32 status = 1;
}

message GetFileInformationResponse {
  int32 status = 1;
  uint64 file_attributes = 2;
  int64 file_creation_time = 3;
  int64 file_last_access_time = 4;
  int64 file_last_write_time = 5;
  uint64 file_size = 6;
}

message DeleteFileResponse {
  int32 status = 1;
}

message DeleteDirectoryResponse {
  int32 status = 1;
}

message MoveFileResponse {
  int32 status = 1;
}

message LockFileResponse {
  int32 status = 1;
}

message SetEndOfFileResponse {
  int32 status = 1;
}

message SetAllocationSizeResponse {
  int32 status = 1;
}

message SetFileAttributesResponse {
  int32 status = 1;
}

message UnlockFileResponse {
  int32 status = 1;
}