syntax = "proto3";

package drive_protocol;

option java_package = "drive_protocol";
option java_multiple_files = true;

message ClientBlock {
  enum Command {
    CreateFile = 0;
    CloseFile = 1;
    ReadFile = 2;
    WriteFile = 3;
    FlushFileBuffer = 4;
    GetFileInformation = 5;
    DeleteFile = 6;
    DeleteDirectory = 7;
    MoveFile = 8;
    LockFile = 9;
    UnlockFile = 10;
    SetEndOfFile = 11;
    SetAllocationSize = 12;
    SetFileAttributes = 13;
  }
  Command command = 1;
}

message ServerBlock {
}

service Procedure {
  rpc Call(stream ClientBlock) returns (stream ServerBlock);
}